openshift/yaml/mattermost/mattermost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost
  template:
    metadata:
      labels:
        app: mattermost
    spec:
      containers:
      - name: mattermost
        image: mattermost/mattermost-team-edition:10.5.1
        ports:
        - containerPort: 443
        - containerPort: 8065
        readinessProbe:
          httpGet:
            path: /api/v4/system/ping
            port: 8065
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/v4/system/ping
            port: 8065
          initialDelaySeconds: 60
          periodSeconds: 10
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
        volumeMounts:
        - name: mattermost-data
          mountPath: /opt/mattermost/data
      volumes:
      - name: mattermost-data
        persistentVolumeClaim:
          claimName: mattermost-pvc
