openshift/yaml/mattermost/mattermost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-service
spec:
  selector:
    app: mattermost
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http-mattermost
    protocol: TCP
    port: 8065
    targetPort: 8065
